--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1361,7 +1361,11 @@ section h2 {
   max-height: min(999px, 163vw);
 }
 
-/* #\32 _2_chords_characters Styles werden bei Bedarf hier definiert */
+/* Styles werden bei Bedarf hier definiert
+#\32 _2_chords_stable_instable 
+
+#\32 _5_chords_characters 
+*/
 
 .play-chord-2_2 {
   opacity: 0;
