--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1290,7 +1290,7 @@ section h2 {
 #\32 _5_chords_characters 
 */
 
-.play-button_2_2 {
+.play-button_2_2, .replay-button_2_2 {
   opacity: 0.1;
   width: 100%;
   height: min(48vw, 320px);
@@ -1299,10 +1299,25 @@ section h2 {
   position:absolute;
   top: 0px;
   z-index: 101;
+  transition: opacity 0.2s ease;
 }
 
-.play-button_2_2:hover {
-  opacity: 0.05;
+.replay-button_2_2 {
+  z-index: 100;
+}
+
+.play-button_2_2:hover, .replay-button_2_2:hover {
+  opacity: 0.5;
+}
+
+/* Container positioning */
+.play-buttons-container-2_2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50vh; /* Match button height */
+  z-index: 100;
 }
 
 .button_2_2_grid {
