fix colors for navi highlight and homepage footer links

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -674,7 +674,7 @@ input {
   --background-color: #ffffff; /* background of impressum, ...*/
   --text-color: #2d3436;
   --text-color-input: #2d3436;
-  --accent-color: #060505; /* navigation highlight */
+  --accent-color: #fdcb6e; /* navigation highlight */
   --success-color: #00b894;
   --warning-color: #ff7675;
   --color-accent-light: #fdcb6e;
